Apply a border color for testing. Unification of border color variables.

--- a/src/client/styles/scss/theme/_apply-colors-dark.scss
+++ b/src/client/styles/scss/theme/_apply-colors-dark.scss
@@ -315,3 +315,11 @@ body.on-edit {
     background-color: $bgcolor-tags;
   }
 }
+
+.top-of-table-contents {
+  border-color: $border-color;
+
+  .grw-seen-user-list {
+    border-color: $border-color;
+  }
+}
