--- a/src/client/styles/scss/theme/default.scss
+++ b/src/client/styles/scss/theme/default.scss
@@ -90,7 +90,7 @@ html[light] {
   $color-editor-icons: $color-global;
 
   // Border colors
-  $border-color-theme: $danger;
+  $border-color-theme: $gray-400;
   $bordercolor-inline-code: $gray-400; // optional
 
   // Dropdown colors
